# BizFlowAgentHub

./: .gitignore  README.md  docker-compose.yml  pom.xml
apps/admin-console/: index.html  package-lock.json  package.json  tailwind.config.js
apps/agent-runtime/: pyproject.toml
apps/agent-runtime/app/: config.py  engine.py  main.py  models.py  tools.py
apps/agent-runtime/app/agents/: base.py  context.py  executor.py  handoff.py  knowledge.py  monitoring.py  planner.py  policy.py  router.py  validator.py
apps/agent-runtime/app/providers/: base.py  openai_provider.py
apps/agent-runtime/tests/: test_agents.py  test_policy.py  test_router.py
apps/gateway-api/: pom.xml
docs/adr/: ADR-001-workflow-first.md  ADR-002-hybrid-agent-runtime.md  ADR-003-tool-hub-mandatory.md  ADR-004-approval-primitive.md  ADR-005-audit-outbox.md
docs/api/: endpoints.md  openapi.yaml
docs/architecture/: agent-modules.md  erd.md  overview.md  security.md  tool-hub.md  workflow-engine.md
docs/modules/: approval-service.md  audit-service.md  gateway-api.md  knowledge-service.md  tool-hub.md  workflow-engine.md
docs/runbooks/: deployment.md  local-development.md  troubleshooting.md  user-guide.md
docs/workflows/: use-cases.md
infra/scripts/: README.md  bootstrap.ps1  bootstrap.sh  run-all.sh
libs/shared-contracts/: pom.xml
libs/shared-events/: pom.xml
libs/shared-security/: pom.xml
services/approval-service/: pom.xml
services/audit-service/: pom.xml
services/knowledge-service/: pom.xml
services/tool-hub/: pom.xml
services/workflow-engine/: pom.xml
(+115 files in other folders)
