[project]
name = "bizflow-agent-runtime"
version = "0.1.0"
description = "BizFlow Agent Runtime"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "0.111.0"
uvicorn = {version = "0.30.1", extras = ["standard"]}
httpx = "0.27.0"
pydantic = "2.7.4"

[project.optional-dependencies]
test = ["pytest==8.2.2"]

[tool.pytest.ini_options]
pythonpath = ["app"]
