[project]
name = "bizflow-agent-runtime"
version = "0.1.0"
description = "BizFlow Agent Runtime"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "httpx==0.27.0",
  "pydantic==2.7.4",
]

[project.optional-dependencies]
test = ["pytest==8.2.2"]

[tool.pytest.ini_options]
pythonpath = ["app"]
